Only fade in the create poem link when not already visible to prevent flicker due to CSS properties changing.

--- a/static/base.css
+++ b/static/base.css
@@ -191,12 +191,15 @@ div {
   color: #555;
   font-size: 24pt;
   text-decoration: none;
-  opacity: 0;
   -webkit-transition: opacity 500ms;
      -moz-transition: opacity 500ms;
       -ms-transition: opacity 500ms;
        -o-transition: opacity 500ms;
           transition: opacity 500ms;
+}
+
+#create-poem-link.hidden {
+  opacity: 0;
 }
 
 #create-poem-link:hover {
